assets/scss/theme.scss
/* ... */
.product-carousel {
  margin-bottom: 88px;
}

.product-grid-item {
  text-align: center;

  .product-item-actions {
    position: absolute;
    top: -100%;
    left: 50%;
    transform: translate(-50%, -50%);
    transition: all 0.3s ease-out;

    .button {
      display: block;
      width: 135px;
      margin: 0 auto 0.9375em;
      padding-left: 0.25em;
      padding-right: 0.25em;

      & ~ .button {
        margin-bottom: 0;
      }
    }
  }
}

.product-list-item {
  @include layout-group($gutter: 0px, $gutter_vertical: $double-gutter);

  &:not(:last-child) {
    border-bottom: 1px solid $color-border;
  }

  .product-thumb-wrapper,
  .product-item-details,
  .product-item-actions {
    @include media($min: $breakpoint-s) {
      @include layout-group-item;
      vertical-align: middle;
    }
  }

  .product-item-thumbnail {
    @include media($min: $breakpoint-s) {
      width: 176px;
      margin: 0;

      img {
        max-height: 176px;
      }
    }
  }

  .product-item-details {
    padding: 0 $double-gutter;
    width: 100%;
  }

  .product-item-actions {
    text-align: center;
  }

  .product-item-price {
    font-size: rem-calc(20);
  }

  .product-price-line {
    margin-bottom: rem-calc(10);
  }

  .tax-label {
    display: block;
  }

  .button {
    width: 100%;
    margin: $gutter 0;
    white-space: nowrap;

    & + .button {
      margin: 0;
    }
  }
}

.product-item-brand {
  @extend h6;
  color: $color-body;
}

.product-badge {
  position: absolute;
  top: rem-calc(25px);
  right: 0;
  z-index: 1;
  padding: rem-calc(14) rem-calc(16);
  font-weight: 700;
  letter-spacing: 0.066em;
  color: contrast($color-nav-active, 100%, 60);
  text-transform: uppercase;
  background-color: $color-nav-active;
  transition: transform 0.15s ease-in-out;

  @if $font-secondary == "Roboto Condensed" {
    font-family: $font-secondary, sans-serif;
  }
}

.product-item-title {
  margin: rem-calc(10) 0;
  font-family: $font-secondary, sans-serif;
  font-size: 17px;
  font-weight: bold;
  color: $color-bold;
  text-transform: none;

  @if ($font-secondary == "Roboto Condensed") {
    text-transform: uppercase;
  }

  a {
    color: inherit;
  }
}

.product-item-thumbnail {
  position: relative;
  padding: 4%;
  margin-bottom: rem-calc(29);
  overflow: hidden;
  background-color: $color-background;
  border: 1px solid $color-border;

  a {
    display: block;
  }

  .item-link {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
  }

  &:hover {
    .product-item-thumbnail-image {
      transform: scale(1.1);
    }
  }
}

.product-item-mask {
  position: absolute;
  top: 8%;
  right: 8%;
  bottom: 8%;
  left: 8%;
  z-index: 1;
  background-color: rgba($color-collection-item-overlay, 0.9);
  opacity: 0;
  transition: opacity 0.3s ease-in-out;

  @include media($max: $breakpoint-s) {
    display: none;
  }

  .button {
    @if (is-dark($color-collection-item-overlay)) {
      @extend %button-inverse;
    }

    &.button-secondary {
      @if (is-dark($color-collection-item-overlay)) {
        @extend %button-secondary-inverse;
      }
    }
  }
}

.product-item-rating {
  margin-top: 0;
  margin-bottom: 20px;
  color: $color-meta;

  .rating-title {
    margin-right: 9px;
    vertical-align: middle;
    text-transform: uppercase;
    font-family: $font-secondary;
    font-size: 13px;
  }

  .icon-star {
    width: 11px;
    height: 11px;
    opacity: 0.5;
    vertical-align: middle;

    &.full {
      fill: $color-accent;
    }
  }

  .full {
    color: $color-accent;

    .icon-star {
      opacity: 1;
    }
  }
}

.product-item-price {
  @extend h4;
  text-transform: lowercase;
}

.as-low-as-pricing {
  padding-right: 4px;
  font-size: rem-calc(14);
}

.price-tax-label { display: none; }

.price-rrp { text-decoration: line-through; }

.show-both-prices {
  .price-tax-label { display: inline-block; }

  .price-without-tax { color: $color-meta; }
}

/* scss-combine:components/promo-grid */
// .promo-grid {}

.promo-grid-item {
  @include span(3);
  padding-top: 15%;
  background-color: #ddd;
}

/* scss-combine:components/products/product-single-details */
.product-details {
  background-color: $color-background-secondary;

  .add-to-cart {
    @include media($max: $breakpoint-m) {
      padding-right: 5px;
      padding-left: 5px;
      width: 48%;
    }
  }

  .modal & {
    padding: $gutter 0;
    background-color: transparent;
  }

  .breadcrumbs {
    margin-top: rem-calc(-40);
    margin-bottom: rem-calc(40);
  }

  .product-title {
    margin-bottom: 0;

    @include media($min: $breakpoint-m) {
      margin: 0;
    }
  }

  .product-brand {
    @extend h6;
    display: block;
    margin-bottom: 1em;
    color: $color-body;

    &:hover {
      text-decoration: underline;
    }
  }

  .product-price {
    font-size: rem-calc(22);

    @include media($min: $breakpoint-m) {
      font-size: rem-calc(28);
    }
  }

  .price-rrp {
    opacity: 0.5;

    & + .price {
      float: left;
      margin-right: 0.25em;
    }
  }

  .price-you-save {
    font-size: $font-size;
  }

  .product-rating-block {
    margin-top: rem-calc(10);
  }
}

.tax-label {
  font-size: rem-calc(14);
}

.product-details-column {
  @include media($min: $breakpoint-m) {
    @include span(5.95);

    &:last-child { @include last; }
  }
}

.product-images-loader {
  padding: rem-calc(50px) 0;
  text-align: center;

  &.initialized {
    display: none;
  }
}

.product-slides-wrap {
  background-color: transparent;

  .js & { visibility: hidden; }

  &.slick-initialized { visibility: visible; }
}
/* ... */

